# plato-core-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  room.rs  wire.rs
tests/: integration.rs
